# kb-agents

./: .env  .gitignore  Dockerfile  Dockerfile.simple  LICENSE.md  Makefile  README.md  README_KB_BUILDER.md  agent.pl  carsales.pl  docker-compose.yml  kb_builder_agent.py  main.py  main_mock_llm.py  main_original.py  minitest.py  prolog_clpz.py  pyproject.toml  solver.py  tools.py  v_0.pl  v_1.pl
.copilot/: instructions.md
kb_agents/: car.py  miniprolog.py
kb_agents/miniprolog/: __init__.py  arith.py  builtins.py  kb.py  miniprolog.py  parser.py  renaming.py  sld.py  subst.py  syntax.py  unify.py
tests/: test_carsales_agent_simulation.py  test_end_to_end.py  test_miniprolog.py  test_miniprolog_class.py  test_negation.py  test_parse_kb.py  test_parse_predicate_basic.py  test_parse_predicate_edge_cases.py  test_parse_query.py  test_parser.py
