[project]
name = "kb-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.107.0",
    "openai-agents>=0.2.11",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.0.8",
    "pyswip>=0.3.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]
