[project]
name = "kb-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.3.0",
    "lark-parser>=0.12.0",
    "openai>=1.107.0",
    "openai-agents>=0.2.11",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.0.8",
    "pyswip>=0.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.2",
    "z3-solver>=4.15.3.0",
]
